--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,11 @@ body {
 	max-width: 65em;
 }
 
+.newsInfo {
+	font-style: italic;
+	font-size: smaller;
+}
+
 #externalLinks {
 	background-color: #568;
 	color: #ddf;
